# rtfunicode

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  Taskfile.yml  pyproject.toml  rtfunicode.py  setup.py  tests.py
.github/: renovate.json
.github/workflows/: ci-cd.yml  codeql.yml
src/rtfunicode/: __init__.py
