[project]
name = "rtfunicode"
version = "2.0"
description = "Encoder for unicode to RTF 1.5 command sequences"
readme = "README.md"
license = "BSD-2-Clause"
license-files = [ "LICENSE.txt" ]
authors = [
    { name = "Martijn Pieters", email = "mj@zopatista.com" }
]
requires-python = ">=3.3"
keywords = ["rtf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mjpieters/rtfunicode"
Repository = "https://github.com/mjpieters/rtfunicode"
Issues = "https://github.com/mjpieters/rtfunicode/issues"
Changelog = "https://github.com/mjpieters/rtfunicode/blob/main/CHANGELOG.md"

[tool.hatch.build]
include = ["rtfunicode.py"]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "*.py",
]

[build-system]
requires = ["hatchling~=1.27"]
build-backend = "hatchling.build"
